--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,24 @@
 /* Styles */
-
-.email-block {
-    display: grid;
-    grid-template-columns: 1fr 6fr;
-    row-gap: 4px;
-    padding: 4px;
+.run-block {
+  border: var(--border-width) solid var(--background-modifier-border);
+  border-radius: 5px;
 }
 
-.email-block-border {
-    border: 1px solid gray;
-    border-radius: 5px;
+.run-block-frame {
+  background: #fff;
+  width: 100%;
+  padding: 10px;
 }
 
-.email-block-info {
-    font-style: italic;
-    font-size: 80%;
-    align-self: center;
+.run-block-src {
+  border-top: var(--border-width) solid var(--background-modifier-border);
+  font-family: monospace;
+  white-space: pre;
 }
 
-.email-block-info-value {
-    font-size: 90%;
-    align-self: center;
+.run-block-src pre,
+.run-block-src code {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
-.email-block-body {
-    grid-column-start: 1;
-    grid-column-end: span 2;
-    border-left: 2px gray solid;
-    padding-left: 5px;
-}
-
-.email-block-body-line {
-
-}
-
-.email-block-mailto {
-    grid-column-start: 1;
-    grid-row-start: 1;
-    grid-column-end: span 2;
-    --icon-size: 2rem;
-}
-
-.email-block-error {
-    color: red !important;
-}
